hand roll the gpx parsing

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^0.25.0",
-    "gpx-parse": "^0.10.4",
     "jquery": "^3.1.1",
     "leaflet": "^1.0.1",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "xml2js": "^0.4.17"
   }
 }
