--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git"
   },
   "author": "Erik Price <github@erikprice.net>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "css-loader": "^0.25.0",
     "jquery": "^3.1.1",
