--- a/.jshintrc
+++ b/.jshintrc
@@ -1,1 +1,18 @@
-{ "asi": true, "esversion": 6 }
+{
+  "esversion": 6,
+
+  "unused": "vars",
+  "undef": true,
+
+  "strict": "implied",
+
+  "browser": true,
+  "devel": true,
+
+  "camelcase": true,
+  "varstmt": false,
+  "quotmark": true,
+  "curly": true,
+  "eqeqeq": true,
+  "nonbsp": true
+}
