--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Erik Price <github@erikprice.net>",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^0.25.0",
     "leaflet": "^1.0.1",
     "leaflet-easybutton": "^2.2.0",
@@ -19,7 +19,7 @@
     "leaflet-providers": "^1.1.15",
     "picomodal": "^3.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
+    "webpack": "^3.10.0",
     "xml2js": "^0.4.17"
   }
 }
