--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@babel/preset-env": "^7.0.0-beta.36",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^0.25.0",
+    "exif-js": "^2.3.0",
     "leaflet": "^1.0.1",
     "leaflet-easybutton": "^2.2.0",
     "leaflet-image": "^0.4.0",
     "leaflet-providers": "^1.1.15",
+    "npm": "^5.8.0",
     "picomodal": "^3.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^3.10.0",
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^2.11.1",
     "xml2js": "^0.4.17"
   }
 }
