--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^2.11.1",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.17",
+    "xml2json": "^0.11.2"
   }
 }
