--- a/package.json
+++ b/package.json
@@ -18,13 +18,9 @@
     "leaflet-easybutton": "^2.2.0",
     "leaflet-image": "^0.4.0",
     "leaflet-providers": "^1.1.15",
-    "npm": "^5.8.0",
     "picomodal": "^3.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^2.11.1",
-    "xml2js": "^0.4.17",
-    "xml2json": "^0.11.2"
+    "xml2js": "^0.4.17"
   }
 }
