--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
     "url": "git@github.com:erik/derive.git",
     "type": "git"
   },
+  "scripts": {
+    "serve": "webpack-serve"
+  },
   "author": "Erik Price <github@erikprice.net>",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.36",
-    "@babel/preset-env": "^7.0.0-beta.36",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.25.0",
     "exif-js": "^2.3.0",
-    "leaflet": "^1.0.1",
-    "leaflet-easybutton": "^2.2.0",
+    "leaflet": "^1.3.3",
+    "leaflet-easybutton": "^2.3.0",
     "leaflet-image": "^0.4.0",
-    "leaflet-providers": "^1.1.15",
+    "leaflet-providers": "^1.3.1",
+    "pako": "^1.0.6",
     "picomodal": "^3.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^3.10.0",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "babel-loader": "^8.0.0-beta.4",
+    "babel-polyfill": "^6.26.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.3.0",
+    "style-loader": "^0.22.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-serve": "^2.0.2"
   }
 }
