--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Erik Price <github@erikprice.net>",
   "license": "MIT",
   "dependencies": {
+    "easy-fit": "0.0.8",
     "exif-js": "^2.3.0",
     "leaflet": "^1.3.3",
     "leaflet-easybutton": "^2.3.0",
