--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,14 @@ jobs:
     - run: npm ci
     - run: npm run build
 
+    # I am too lazy to change my webpack config, so do it this way
+    - name: Copy Files
+      run: |
+        mkdir -p build/
+        cp style.css index.html bundle.js build/
+
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: .
+        publish_dir: build/
