--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "exif-js": "^2.3.0",
     "fit-file-parser": "^1.6.18",
+    "igc-parser": "^0.5.0",
     "leaflet": "^1.3.3",
     "leaflet-easybutton": "^2.3.0",
     "leaflet-image": "^0.4.0",
