--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
     "style-loader": "^0.22.1",
+    "typescript": "^5.5.4",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-serve": "^2.0.2"
