--- a/package.json
+++ b/package.json
@@ -22,13 +22,10 @@
     "leaflet-image": "^0.4.0",
     "leaflet-providers": "^1.13.0",
     "picomodal": "^3.0.0",
-    "skiz-parser": "^1.4.0",
-    "xml2js": "^0.4.19"
+    "skiz-parser": "^1.4.0"
   },
   "devDependencies": {
-    "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
-    "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-serve": "^2.0.2"
